--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@radix-ui/react-tabs": "^1.1.3",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tiptap/react": "^2.5.7",
+    "@tiptap/starter-kit": "^2.5.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -44,6 +46,7 @@
     "embla-carousel-react": "^8.6.0",
     "firebase": "^11.9.1",
     "genkit": "^1.14.1",
+    "lexical": "^0.16.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
     "patch-package": "^8.0.0",
@@ -58,6 +61,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@lexical/react": "^0.16.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
